src/test/ui/span/dropck_vec_cycle_checked.stderr
error[E0597]: `c2` does not live long enough
  --> $DIR/dropck_vec_cycle_checked.rs:98:25
   |
LL |     c1.v[0].v.set(Some(&c2));
   |                         ^^ borrowed value does not live long enough
...
LL | }
   | - `c2` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c3` does not live long enough
  --> $DIR/dropck_vec_cycle_checked.rs:100:25
   |
LL |     c1.v[1].v.set(Some(&c3));
   |                         ^^ borrowed value does not live long enough
...
LL | }
   | - `c3` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c2` does not live long enough
  --> $DIR/dropck_vec_cycle_checked.rs:102:25
   |
LL |     c2.v[0].v.set(Some(&c2));
   |                         ^^ borrowed value does not live long enough
...
LL | }
   | - `c2` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c3` does not live long enough
  --> $DIR/dropck_vec_cycle_checked.rs:104:25
   |
LL |     c2.v[1].v.set(Some(&c3));
   |                         ^^ borrowed value does not live long enough
...
LL | }
   | - `c3` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c1` does not live long enough
  --> $DIR/dropck_vec_cycle_checked.rs:106:25
   |
LL |     c3.v[0].v.set(Some(&c1));
   |                         ^^ borrowed value does not live long enough
...
LL | }
   | - `c1` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c2` does not live long enough
  --> $DIR/dropck_vec_cycle_checked.rs:108:25
   |
LL |     c3.v[1].v.set(Some(&c2));
   |                         ^^ borrowed value does not live long enough
LL |     //~^ ERROR `c2` does not live long enough
LL | }
   | - `c2` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0597`.
